# ontic-ortho-intern

./: .gitignore  README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: point_cloud.vert
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/myapplication/: Buffer.java  CADModelLoader.java  CADModelRenderer.java  CameraPermissionHelper.java  CameraRenderer.java  CombinedRenderer.java  MainActivity.java  MatchPercentageListener.java  MatrixHelper.java  Model.java  ModelHandler.java  OBJLoader.java  OBJParser.java  OpenCVProcessor.java  OpenCVRenderer.java  PointCloudRenderer.java  ShaderProgram.java
app/src/main/res/layout/: activity_main.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ontic-ortho-intern.git/: config
opencv/: build.gradle
